# Silicon

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
SiliconCommon/: CMakeLists.txt
SiliconCommon/src/: singleton.h
SiliconCommon/src/logging/: logger.h
SiliconEngine/: CMakeLists.txt  SiliconEngine.cpp  SiliconEngine.h
SiliconEngine/src/: silicon_engine.cpp  silicon_engine.h
SiliconEngine/src/platform/: window.cpp  window.h
SiliconEngine/src/utility/: singleton.h
SiliconEngine/src/utility/logging/: logger.h
SiliconGraphics/: CMakeLists.txt
SiliconGraphics/src/: silicon_graphics.cpp  silicon_graphics.h  vk_device.cpp  vk_device.h  vk_instance.cpp  vk_instance.h  vk_surface.cpp  vk_surface.h
SiliconGraphics/src/common/: vulkan_assert.h
SiliconTest/: CMakeLists.txt
SiliconTest/src/: main.cpp
